--- a/REMAKE/index.html
+++ b/REMAKE/index.html
@@ -2,20 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Blog</title>
+<title>Debug Test File</title>
 </head>
 <body>
-
-<!-- GLOBAL OBJECT window.ff
-
--->
-
-
-Debug test file.
 
 {{ date }}
 
 <myMenu></myMenu>
+
+<my-custom></my-custom>
 
 <script type="module" src="main.js"></script>
 </body>
