--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link rel="icon" href="data:;base64,iVBORw0KGgo=">
 <title>Debug Test File</title>
 </head>
 <body>
