Some minor changes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@ clo-ck {
   fill: coral;
 }
 </style>
-<script type="module" src="main.js"></script>
+<script type="module" src="./main.js"></script>
 </body>
 </html>
