Some style changes

--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@ body {
 
 myMenu a {
   display: flex;
-  color: coral;
+  color: darkOliveGreen;
   font-size: 3em;
 }
 
 clo-ck {
   position: fixed;
-  bottom: 1px;
-  right: 1px;
+  bottom: 5px;
+  right: 5px;
 }
 
 .clockCircle {
-  fill: coral;
+  fill: darkOliveGreen;
 }
 </style>
 <script type="module" src="./main.js"></script>
