--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
 
 myMenu a {
   display: flex;
-  color: darkOliveGreen;
+  color: mediumSlateBlue;
   font-size: 3em;
 }
 
@@ -38,7 +38,7 @@ clo-ck {
 }
 
 .clockCircle {
-  fill: darkOliveGreen;
+  fill: mediumSlateBlue;
 }
 </style>
 <script type="module" src="./main.js"></script>
