Test browser caché after add .js to .ff extensions

--- a/dev/index.html
+++ b/dev/index.html
@@ -14,6 +14,8 @@
 <my-custom></my-custom>
 
 <example-component>route="./components/"</example-component>
+Testing cache:
+<jex->route="./components/"</jex->
 
 <script type="module" src="main.js"></script>
 </body>
