Pushing new test

--- a/dev/index.html
+++ b/dev/index.html
@@ -1,22 +1,52 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+<head prefix="og:http://ogp.me/ns#">
 <meta charset="utf-8">
 <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-<title>Debug Test File</title>
+<link rel="preload" href="ff.js" as="script" crossorigin>
+<title>Bug Writeups, Hacking and Bughunting</title>
+<meta name="robots" content="index,follow">
+<meta name="application-name" content="Bug Writeups, Hacking, Security, Bug Hunting.">
+<meta property="og:type" content="website">
+<meta name="summary" content="Bug Hunting, hacking and security write-ups.">
+<meta name="author" content="StringManolo">
+<meta name="designer" content="StringManolo">
+<meta name="publisher" content="StringManolo">
+<meta name="lang" content="en">
+<meta name="description" content="Writeups about bug hunting and web security. Come and read!">
+<meta name="keywords" content="bug hunting,writeups,hacking,xss,csrf">
+<meta name="distribution" content="global">
+<meta name="web_author" content="StringManolo">
+<meta name="rating" content="security">
+<meta name="rating" content="safe for kids">
+<meta name="subject" content="Bug Hunting">
+<meta name="title" content="Bug Writeups - Hacking and Bug Hunting">
+<meta name="copyright" content="Copyright 2020">
+<meta name="abstract" content="bugs.stringmanolo.ga is a web project build by StringManolo to share his research in securty field.">
+<meta name="country" content="Spain">
+<meta name="classification" content="Bug Hunting, Hacking, Web Security, Pappers, Writeups">
+<meta name="format-detection" content="telephone=yes">
+<meta property="og:description" content="Bug Hunting, Hacking, Web Security, Pappers, Writeups">
+<meta property="og:locale" content="es">
+<meta property="og:url" content="https://bugs.stringmanolo.ga">
+<meta property="og:title" content="Bug Writeups">
+<meta property="og:site_name" content="bugs.stringmanolo.ga">
+<meta name="format-detection" content="telephone=yes"> 
+<link rel="stylesheet" href="./main.css"> 
 </head>
 <body>
+<!-- Views Counter -->
+<img src="https://viewersiterator.blogspot.com/2020/10/bugsstringmanologa.html" class="donotshow"></iframe>
 
-{{ date }}
-
+<div id="center">
+<myViews>
 <myMenu></myMenu>
+</myViews>
+</div>
 
-<my-custom></my-custom>
+<div id="nonCenter"></div>
+{{{ copyright }}}
 
-<example-component>route="./components/"</example-component>
-Testing cache:
-<jex->route="./components/"</jex->
-
-<script type="module" src="main.js"></script>
+<script type="module" src="./main.js"></script>
 </body>
 </html>
