Replaced alerts by div.value in service worker

--- a/dev/index.html
+++ b/dev/index.html
@@ -36,7 +36,9 @@
 </head>
 <body>
 <!-- Views Counter -->
-<img src="https://viewersiterator.blogspot.com/2020/10/bugsstringmanologa.html" class="donotshow"></iframe>
+<img src="https://viewersiterator.blogspot.com/2020/10/bugsstringmanologa.html" class="donotshow">
+
+<div id="debugLogs"></div>
 
 <div id="center">
 <myViews>
