Some text to check where logs duv is visible

--- a/dev/index.html
+++ b/dev/index.html
@@ -38,7 +38,7 @@
 <!-- Views Counter -->
 <img src="https://viewersiterator.blogspot.com/2020/10/bugsstringmanologa.html" class="donotshow">
 
-<div id="debugLogs"></div>
+<div id="debugLogs">logs will be here ...</div>
 
 <div id="center">
 <myViews>
