--- a/dev/index.html
+++ b/dev/index.html
@@ -3,7 +3,7 @@
 <head prefix="og:http://ogp.me/ns#">
 <meta charset="utf-8">
 <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-<link rel="preload" href="ff.js" as="script" crossorigin>
+<link rel="preload" href="ff_dev.js" as="script" crossorigin>
 <title>Bug Writeups, Hacking and Bughunting</title>
 <meta name="robots" content="index,follow">
 <meta name="application-name" content="Bug Writeups, Hacking, Security, Bug Hunting.">
