Test speed without external tracker

--- a/dev/index.html
+++ b/dev/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 <!-- Views Counter -->
-<img src="https://viewersiterator.blogspot.com/2020/10/bugsstringmanologa.html" class="donotshow">
+<!--<img src="https://viewersiterator.blogspot.com/2020/10/bugsstringmanologa.html" class="donotshow">-->
 
 <div id="debugLogs">logs will be here ...</div>
 
