--- a/dev/index.html
+++ b/dev/index.html
@@ -43,6 +43,7 @@
 <div id="center">
 <myViews>
 <myMenu></myMenu>
+<p>Testing</p><p>Where</p><p>this text</p><p>Is displayed</p>
 </myViews>
 </div>
 
