Test Landing page

--- a/dev/index.html
+++ b/dev/index.html
@@ -35,10 +35,9 @@
 <link rel="stylesheet" href="./main.css"> 
 </head>
 <body>
+
 <!-- Views Counter -->
 <img src="https://viewersiterator.blogspot.com/2020/10/bugsstringmanologa.html" class="donotshow">
-
-<div id="debugLogs">logs will be here ...</div>
 
 <div id="center">
 <myViews>
@@ -46,7 +45,22 @@
 </myViews>
 </div>
 
-<div id="nonCenter"></div>
+<div id="nonCenter">
+<section id="landingPage">
+<header></header>
+<h1>Learn Security</h1>
+<p>Get updates from String Manolo Security Research to help you protect software from new and popular threats.</p>
+<ul>
+<li>Security Bugs</li>
+<li>Research</li>
+<li>Pappers</li>
+<li>Tutorials</li>
+<li>Tools</li>
+<li>Development</li>
+</ul>
+</section>
+</div>
+
 {{{ copyright }}}
 
 <script type="module" src="./main.js"></script>
