--- a/dev/index.html
+++ b/dev/index.html
@@ -45,21 +45,7 @@
 </myViews>
 </div>
 
-<div id="nonCenter">
-<section id="landingPage">
-<header></header>
-<h1>Learn Security</h1>
-<p>Get updates from String Manolo Security Research to help you protect software from new and popular threats.</p>
-<ul>
-<li>Security Bugs</li>
-<li>Research</li>
-<li>Pappers</li>
-<li>Tutorials</li>
-<li>Tools</li>
-<li>Development</li>
-</ul>
-</section>
-</div>
+<div id="nonCenter"></div>
 
 {{{ copyright }}}
 
