--- a/dev/unrelated/chromeUrl.html
+++ b/dev/unrelated/chromeUrl.html
@@ -8,5 +8,10 @@
 <a href="chrome://flags">flags</a>
 <img src="chrome://flag">
 <iframe src="chrome://flag"></iframe>
+<script>
+document.querySelector("img").onclick=function(){
+  window.location="chrome://flag";
+}!
+</script>
 </body>
 </html>
