--- a/dev/unrelated/chromeUrl.html
+++ b/dev/unrelated/chromeUrl.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta http-equiv="refresh" content="7;URL='chrome://flag/'"/>    
 </head>
 <body>
-<a href="chrome://flag">flag</a>
-<a href="chrome://flags">flags</a>
+<a href="javascript:window.location=chrome://flag">flag</a>
+<a href="javascript://flag">flag2</a>
 <img src="chrome://flag">
 <iframe src="chrome://flag"></iframe>
 <script>
